<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/top_text_about"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_dark"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="95dp"
        android:lineSpacingExtra="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/bottom_text_about"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_dark"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="280dp"
        android:lineSpacingExtra="20dp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@mipmap/pic_ana"
        android:contentDescription="@string/picture_of_ana"/>

</RelativeLayout>