<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_fav_fruits"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/img_favFruit"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/picture_of_fruit"/>

    <TextView
        android:id="@+id/name_favFruit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnAboutMe"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:background="@drawable/button_color"
        android:text="@string/btnFruit_text"
        android:textSize="27sp"
        android:onClick="changeFruit"
        android:textAllCaps="false"/>

</RelativeLayout>